--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
 # 依赖目录
-/node_modules
+node_modules/
+
+# 构建输出
+dist/
+
+# 环境变量
+.env
+.env.local
+.env.*.local
+
+# 日志文件
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # 编辑器目录和文件
-.vscode
-
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # 操作系统文件
 # macOS
