--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Clean npm cache
+        run: npm cache clean --force
+
+      - name: Set npm registry (use npmmirror)
+        run: npm config set registry https://registry.npmmirror.com
+
       - name: Install dependencies
         run: |
           npm ci
