--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,17 +18,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'npm'
 
-      - name: Clean npm cache
-        run: npm cache clean --force
+      - name: Remove npm cache folder
+        run: rm -rf ~/.npm
 
       - name: Set npm registry (use npmmirror)
         run: npm config set registry https://registry.npmmirror.com
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm install
 
       - name: Optimize images
         uses: calibreapp/image-actions@main
