更新部署配置，将npm镜像源更改为官方源，并修改依赖安装命令以支持legacy-peer-deps和强制安装

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,11 @@ jobs:
       - name: Remove npm cache folder
         run: rm -rf ~/.npm
 
-      - name: Set npm registry (use npmmirror)
-        run: npm config set registry https://registry.npmmirror.com
+      - name: Set npm registry (use official)
+        run: npm config set registry https://registry.npmjs.org
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm install --legacy-peer-deps --force
 
       - name: Optimize images
         uses: calibreapp/image-actions@main
