--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,11 @@ jobs:
       - name: Set npm registry (use official)
         run: npm config set registry https://registry.npmjs.org
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps --force
+      - name: Install yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies (yarn)
+        run: yarn install --network-timeout 600000
 
       - name: Optimize images
         uses: calibreapp/image-actions@main
