--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
+          token: ${{ secrets.PERSONAL_TOKEN }}
           folder: dist  # 构建输出目录
           branch: gh-pages  # 部署分支
           clean: true  # 清理旧文件 
